# factjot-2

./: .env.example  .gitignore  README.md  V1_REFERENCE.md  pyproject.toml
.claude/evals/: reel-pipeline.md
.github/workflows/: manual-test.yml
brand/: brand_kit.json
brand/ambient/: README.md
brand/intros/: factjot_intro.mov
data/ledgers/: posted.jsonl  topic_curation.jsonl
docs/: SPEC_VIDEO_PIPELINE.md  audit-findings.md  concerns.md  gotchas-transfer.md  overnight-2026-05-11-log.md
docs/v1-extracts/: visual-constants.md
insta-brain/: CLAUDE.md  CRITICAL_FACTS.md  gotchas.md
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: Root.tsx
scripts/: run_evals.py
src/core/: anthropic_client.py  brand.py  config.py  logger.py  paths.py  run_id.py
src/pipelines/: base.py  (+2 more)
style/: style-guide.md
tests/: conftest.py  test_anthropic_client.py  test_atlas_obscura.py  test_brand_loader.py  test_brand_tokens.py  test_discovered_candidate.py  test_discovery_orchestrator.py  test_env_validation.py  test_era.py  test_fact_checker.py  test_hacker_news.py  test_ledgers.py  test_logger.py  test_models.py  test_narration.py  test_orchestrator.py  test_paths.py  test_pexels.py  test_pipeline_base.py  test_pixabay.py  test_publish_gate.py  test_publish_stubs.py  test_reddit_discovery.py  test_reel_pipeline.py  test_registry.py  test_render.py  test_run_context.py  test_run_id.py  test_runner.py  test_script_gen.py  test_topic_curator.py  test_vision.py  test_wikidata.py  test_wikidata_patterns.py  test_wikimedia.py  test_wikipedia_dyk.py
(+62 files in other folders)
